--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </ul>
     </main>
 
-    <script src="./src/js/"></script>
+    <script src="./src/js/index.js"></script>
 </body>
 
 </html>
